<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintHorizontal_weight="1"
    android:paddingLeft="48dp"
    android:paddingRight="48dp"
    tools:context=".login.view.RecoverPasswordActivity">

    <TextView
        android:id="@+id/recoverEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_email"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.25"/>

    <com.geronso.pearler.widgets.Snackbar
        android:id="@+id/snackbar"
        style="@style/Theme.Pearler.Snackbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="36dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        style="@style/Theme.Pearler.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/email"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintTop_toBottomOf="@id/recoverEmail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/recoverEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.geronso.pearler.widgets.LoadingButton
        android:id="@+id/nextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="64dp"
        android:background="@drawable/button_login"
        android:text="@string/next"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>