<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration.view.RegistrationActivity"
    android:id="@+id/registration_parent_layout"
    app:layoutDescription="@xml/activity_login_scene">

    <View
        android:id="@+id/carpet"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="2"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cl_registration"/>

    <View
        android:id="@+id/g_login_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/carpet"
        android:layout_marginBottom="64dp"/>

    <com.geronso.pearler.widgets.Snackbar
        android:id="@+id/snackbar"
        style="@style/Theme.Pearler.Snackbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="36dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_registration"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/login_view"
        android:elevation="8dp"
        android:paddingLeft="48dp"
        android:paddingTop="48dp"
        android:paddingRight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/g_login_view"
        app:layout_constraintVertical_weight="4">

        <TextView
            android:id="@+id/tv_pearler_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pearler"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/welcome_registration"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/tv_pearler_registration" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email_registration"
            style="@style/Theme.Pearler.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/email"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password_registration"
            style="@style/Theme.Pearler.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="password_toggle"
            app:layout_constraintTop_toBottomOf="@id/til_email_registration">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:importantForAutofill="no"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.geronso.pearler.widgets.LoadingButton
            android:id="@+id/registrationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="64dp"
            android:text="@string/btn_register_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_password_registration" />

<!--        <View-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="1dp"-->
<!--            android:layout_marginRight="8dp"-->
<!--            android:background="@color/black"-->
<!--            app:layout_constraintBottom_toBottomOf="@id/tv_or"-->
<!--            app:layout_constraintLeft_toLeftOf="parent"-->
<!--            app:layout_constraintRight_toLeftOf="@id/tv_or"-->
<!--            app:layout_constraintTop_toTopOf="@id/tv_or" />-->

<!--        <View-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="1dp"-->
<!--            android:layout_marginLeft="8dp"-->
<!--            android:background="@color/black"-->
<!--            app:layout_constraintBottom_toBottomOf="@id/tv_or"-->
<!--            app:layout_constraintLeft_toRightOf="@id/tv_or"-->
<!--            app:layout_constraintRight_toRightOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="@id/tv_or" />-->

<!--        <TextView-->
<!--            android:id="@+id/tv_or"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:gravity="center"-->
<!--            android:text="@string/or"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="24sp"-->
<!--            app:layout_constraintLeft_toLeftOf="parent"-->
<!--            app:layout_constraintRight_toRightOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/registrationButton" />-->
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.motion.widget.MotionLayout>